--------------------------------------------------------------------------------
drkns 23.07.2021 01:41:38 +0100 - build 5854

1. Set console input mode in a smarter way.

--------------------------------------------------------------------------------
drkns 22.07.2021 19:50:21 +0100 - build 5853

1. Reduce CPU load in the log viewer.

--------------------------------------------------------------------------------
drkns 20.07.2021 17:48:06 +0100 - build 5852

1. gh-425 Incorrect file sizes shown/calculated for files compressed with LZX

2. Continue 5850.

--------------------------------------------------------------------------------
drkns 20.07.2021 02:38:36 +0100 - build 5851

1. Rework and simplify Delete/Wipe/Recycle dialog localisation.

--------------------------------------------------------------------------------
drkns 19.07.2021 22:08:39 +0100 - build 5850

1. Experimental: removed fake dialogs and preredraw magic from editor load/save/find progress bars.

--------------------------------------------------------------------------------
drkns 13.07.2021 20:22:19 +0100 - build 5849

1. Preserve the locked state when reopening editor from history.

--------------------------------------------------------------------------------
drkns 12.07.2021 20:53:26 +0100 - build 5848

1. Render real shadows when possible.

--------------------------------------------------------------------------------
drkns 12.07.2021 00:21:06 +0100 - build 5847

1. Refactoring.

2. More logging.

--------------------------------------------------------------------------------
drkns 11.07.2021 16:27:30 +0100 - build 5846

1. Screen artefacts after updating QView panel.

--------------------------------------------------------------------------------
drkns 10.07.2021 15:55:20 +0100 - build 5845

1. Correctly show delete indicator if the directory scan before it was cancelled.

2. A few more fullwidth-related improvements.

3. Workaround for a conhost bug in DirectX mode.
