@@ -1,4 +1,9 @@
 --------------------------------------------------------------------------------
+drkns 25.07.2021 19:40:43 +0100 - build 5855
+
+1. Copy progress is a real dialog now. Yay.
+
+--------------------------------------------------------------------------------
 drkns 23.07.2021 01:41:38 +0100 - build 5854
 
 1. Set console input mode in a smarter way.
